--- a/interface.css
+++ b/interface.css
@@ -1,5 +1,3 @@
-
-
 html {
 	height: 100%;
 	width: 100%;
@@ -9,8 +7,8 @@ body {
 	height: 100%;
 	width: 100%;
 	font-family: "Lucida Console";
-	color: #333;
-	background-color: #666;
+	color: #473b30;
+	background-color: #6a5947;
 	cursor: grab;
 	overflow: hidden;
 }
@@ -22,16 +20,16 @@ header {
 
 hr {
 	height: 1px;
-	background-color: #333;
+	background-color: #473b30;
 	border: 0px;
 }
 
 .box {
 	float: left;
-	border: 1px solid #333;
-	background-color: #999;
-	box-shadow: -4px 4px #333;
-	margin-bottom: 7.5px;
+	border: 1px solid #473b30;
+	background-color: #998067;
+	box-shadow: -4px 4px #473b30;
+	margin-bottom: 15px;
 	overflow: hidden;
 	width: 100%;
 }
@@ -51,6 +49,13 @@ hr {
 	margin: 7.5px
 }
 
+.rightCol {
+	width: 25%;
+	height: 100%;
+	float: left;
+	margin: 7.5px;
+}
+
 .tab {
 	margin-bottom: -1px; 
 	margin-left: 7.5px;"
@@ -64,21 +69,27 @@ footer {
 	position: fixed;
 	right: 10px;
 	bottom: 10px;
+	text-align: right;
 }
 
 ::selection {
-	color: #999;
-	background-color: #333;
+	color: #998067;
+	background-color: #473b30;
+}
+
+input[type = "button"]{
+	outline: none;
 }
 
 button {
 	font-family: "Lucida Console";
 	font-size: 16px;
-	color: #333;
-	border: 1px solid #333;
+	color: #473b30;
+	border: 1px solid #473b30;
 	padding: 5px;
-	background-color: #999;
+	background-color: #998067;
 	cursor: grab;
+	outline: none;
 }
 
 button:active {
@@ -86,23 +97,38 @@ button:active {
 }
 
 button.normal {
-	box-shadow: -4px 4px #333;
+	box-shadow: -4px 4px #473b30;
 }
 
 button.normal:active {
 	transform: translateY(2px) translateX(-2px);
-	box-shadow: -2px 2px #333;
+	box-shadow: -2px 2px #473b30;
 }
 
 .tab button {
-	background-color: #888;
+	background-color: #826c57;
 	padding-left: 15px;
 	padding-right: 15px;
 	padding-top: 7.5px;
-	border-bottom: 1px solid #333;
+	border-bottom: 1px solid #473b30;
 }
 
 .tab button.shown {
-	border-bottom: 1px solid #999;
-	background-color: #999;
+	border-bottom: 1px solid #998067;
+	background-color: #998067;
+}
+
+input {
+	background-color: #826c57;
+	border: none;
+}
+
+::placeholder {
+	opacity: 0.25;
+}
+
+.skyColor {
+	width: 100%;
+	height: 150px;
+	position: absolute;
 }
