--- a/interface.css
+++ b/interface.css
@@ -165,6 +165,10 @@ ul {
 	grid-row: 2 / 3;
 }
 
+#sandglass-tab {
+	text-align: center;
+}
+
 #pockets {
 	overflow-wrap: anywhere;
 	font-size: 24px;
